Wed Jun  7 01:06:27 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - if setenv() replacement is needed, link it statically to better
   handle overlap with net-snmp.

Sat Jun  3 21:35:41 UTC 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec.c: data for 36V UPSes.
 - driver.list: Ablerex MS-RT (megatec).

Sun May 21 18:31:47 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - man/cyberpower.8: updated section on supported hardware; added
   information on hardware supported by alternate drivers. 

Fri May 12 21:01:35 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - hotplug/hotplug-ng: added mappings for various USB devices

Tue May  9 03:02:19 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - upsd: bumped "initial wait" time to 15 seconds to suit some slower
   devices.

Tue May  9 02:29:03 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - data/cmdvartab: brought help strings in sync with docs/new-names.txt
 - server/netget.c: write "Description unavailable" not just "Unavailable"
   if some instant command or variable has no description.

Mon May  8 16:00:40 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups/Tripplite subdriver: cleaned up variable mappings. Added new
   status items: overheat, awaitingpower, commfault, vrange.
 - newhidups/Belkin subdriver: added awaitingpower status flag
 - docs/new-names.txt: added output.frequency.nominal

Sun May  7 23:46:04 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: added some non-standard usage codes to Tripplite subdriver

Sat May  6 14:48:24 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: added string conversions to Tripplite subdriver

Sat May  6 14:28:01 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: enabled experimental Tripplite subdriver

Mon Apr 24 21:25:50 UTC 2006 / Niels Baggesen <nba@users.sourceforge.net>
